[Fuchsia] Fix FrameImpl to cope with multiple View lifetimes.

Tear-down any existing View-related resources (e.g. Aura window, focus
controller etc) if a CreateView() request is received while a View is
already active for this Frame.

Bug: 920490
Change-Id: Iec4f7d393e33d583bc7dc8caf0bbea5f4ae11f6d
Reviewed-on: https://chromium-review.googlesource.com/c/1423901
Commit-Queue: Wez <wez@chromium.org>
Reviewed-by: Kevin Marshall <kmarshall@chromium.org>
Cr-Commit-Position: refs/heads/master@{#628554}
Former-commit-id: 235f2d1d29861d1bf6c2a86d836674282e46fcca